--- a/styles/hero.css
+++ b/styles/hero.css
@@ -2,7 +2,18 @@ section.hero {
   max-width: 80em;
   width: 100%;
   padding: 2.5rem 2rem;
+
   margin-inline: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  overflow: hidden;
+
+  @media (width < 80em) {
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 2rem;
+  }
 
   & h1 {
     max-width: 40rem;
@@ -32,7 +43,7 @@ section.hero {
   h1 span {
     display: block;
 
-    animation: slideUp 7s infinite ease;
+    animation: slideUp 6.5s 2s infinite ease-in-out;
   }
 
   /* buttons */
@@ -41,6 +52,12 @@ section.hero {
     gap: 2rem;
     margin-top: 3rem;
 
+    @media (width < 80em) {
+      flex-direction: column-reverse;
+      gap: 1.5rem;
+      
+    }
+
     & .button {
       display: flex;
       align-items: center;
@@ -48,6 +65,12 @@ section.hero {
       border-radius: 5rem;
 
       transition: scale 350ms;
+
+      @media (width < 80em) {
+        justify-content: center;
+        padding: 1.5rem 0;
+        width: 100%;
+      }
 
       &.buy {
         padding: 1.5rem 3rem;
@@ -76,6 +99,78 @@ section.hero {
     }
   }
 
+  /* patins */
+  & > div:nth-child(2) {
+    display: block;
+    width: 100%;
+    max-width: 30.5rem;
+    height: 30.5rem;
+
+    & .content {
+      width: 100%;
+      height: 100%;
+      position: relative;
+    }
+
+    & img {
+      position: absolute;
+      width: 100%;
+    }
+
+    & img[src*="Ellipse"] {
+      width: 94%;
+      top: 3%;
+      left: 3%;
+
+      transform: translateX(200%);
+      animation: slideIn 3s 200ms ease forwards;
+    }
+
+    & img[src*="patins"] {
+      z-index: 1;
+
+      transform: translateX(200%);
+      animation: slideIn 3s ease forwards;
+    }
+
+    & img[src*="stars-1"] {
+      max-width: 5.5rem;
+      top: 30%;
+      z-index: 0;
+
+      opacity: 0;
+      transform: translateX(400%);
+      animation: slideIn 2s 800ms ease forwards, appear 100ms 800ms both;
+    }
+
+    & img[src*="stars-2"] {
+      max-width: 2.5rem;
+      right: 0;
+      bottom: 35%;
+      z-index: 2;
+      opacity: 0;
+
+      transform: translateX(800%);
+      animation: slideIn 2.2s 800ms ease forwards, appear 900ms 800ms ease-in-out forwards;
+    }
+  }
+}
+
+@keyframes slideIn {
+  50% {
+    transform: translateX(-20px);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes appear {
+  to {
+    opacity: 1;
+  }
+  
 }
 
 @keyframes slideUp {
